<resources>
    <string name="app_name">MY HOME</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="history">History</string>
    <string name="detail">Detail</string>
    <string name="account">Account</string>
    <string name="email">username@example.com</string>
    <string name="user_name">User name</string>
    <string name="about">About</string>
    <string name="sign_out">Sign out</string>
    <string name="my_home">MY HOME</string>
    <string name="t_notification_alert_name">Alert temperature</string>
    <string name="h_notification_alert_name">Alert humidity</string>
    <string name="t_description_info_noti_alert">Alert temperature not in safe range</string>
    <string name="h_description_info_noti_alert">Alert humidity not in safe range</string>
    <string name="board_information">Board Information</string>
    <string name="back">Back</string>
    <string name="wifi">WiFi</string>
    <string name="ip">IP</string>
    <string name="gateway">Gateway</string>
    <string name="subnet">Subnet</string>
    <string name="internal_temperature">Internal Temperature</string>
    <string name="no_data_for_chart">No data for chart</string>
    <string name="permission">Permission</string>
    <string name="power_optimization">Power Optimization</string>

    <style name="tvValue">
        <item name="android:textSize">30sp</item>
        <item name="android:gravity">center</item>
        <item name="android:textColor">@color/black</item>
    </style>

    <style name="HeaderBig30">
        <item name="android:textColor">@color/black</item>
        <item name="android:textSize">30sp</item>
        <item name="android:layout_gravity">center_horizontal</item>
        <item name="android:gravity">center_horizontal</item>
    </style>

    <style name="HeaderBig35">
        <item name="android:textColor">@color/black</item>
        <item name="android:textSize">30sp</item>
        <item name="android:layout_gravity">center_horizontal</item>
        <item name="android:gravity">center_horizontal</item>
    </style>

    <style name="HeaderMedium25">
        <item name="android:textColor">@color/black</item>
        <item name="android:textSize">25sp</item>
        <item name="android:layout_gravity">center_horizontal</item>
        <item name="android:gravity">center_horizontal</item>
    </style>

    <style name="TitleBig25">
        <item name="android:textColor">@color/black</item>
        <item name="android:textSize">25sp</item>
        <item name="android:layout_marginStart">10dp</item>
    </style>

    <style name="TextBlack25">
        <item name="android:textColor">@color/black</item>
        <item name="android:textSize">25sp</item>
    </style>

    <style name="TextBlack20">
        <item name="android:textColor">@color/black</item>
        <item name="android:textSize">20sp</item>
    </style>

    <style name="TitleBig20">
        <item name="android:textColor">@color/black</item>
        <item name="android:textSize">20sp</item>
        <item name="android:layout_marginStart">10dp</item>
    </style>

    <style name="BtnSelect">
        <item name="android:textColor">@color/black</item>
        <item name="android:textSize">25sp</item>
        <item name="android:layout_gravity">center_horizontal</item>
        <item name="android:gravity">center_horizontal</item>
        <item name="android:padding">8dp</item>
        <item name="android:layout_marginTop">10dp</item>
    </style>

    <style name="Trans20" parent="Theme.AppCompat.Light.Dialog.Alert">
        <item name="android:background">#37000000</item>
    </style>

    <style name="CustomDialog" parent="android:Theme.Material.Dialog.Alert">
        <item name="android:windowIsTranslucent">true</item>
        <item name="android:windowBackground">@android:color/transparent</item>
    </style>
</resources>