<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp">

    <LinearLayout
        android:id="@+id/ln_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_user"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:src="@drawable/outline_account_circle_black_36dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/username"
                style="@style/TitleBig25"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_name" />

            <TextView
                android:id="@+id/email"
                style="@style/TitleBig20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/btn_about"
        style="@style/BtnSelect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about" />

    <TextView
        android:id="@+id/btn_sign_out"
        style="@style/BtnSelect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_out"
        android:textColor="@color/red" />
</LinearLayout>