<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activitymain.fragment.BoardInformationFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/background_data_stroke"
        android:orientation="vertical"
        android:padding="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/TitleBig25"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:text="@string/wifi" />

            <TextView
                android:id="@+id/wifi_name"
                style="@style/TitleBig25"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/wifi" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/TitleBig25"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:text="@string/ip" />

            <TextView
                android:id="@+id/ip_address"
                style="@style/TitleBig25"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/ip" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/TitleBig25"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:text="@string/gateway" />

            <TextView
                android:id="@+id/gateway"
                style="@style/TitleBig25"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/gateway" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/TitleBig25"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:text="@string/subnet" />

            <TextView
                android:id="@+id/subnet"
                style="@style/TitleBig25"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/subnet" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:padding="8dp"
        android:text="@string/back" />
</RelativeLayout>